# UEdumper_Android

./: Android.mk  Application.mk  CMakeLists.txt  README.md  build_and_run.bat
src/: Andoird-Memory-Debug.cpp  Android-Memory-Debug.hpp  UE_Dumper.h  UE_Offset.h  UE_Tool.cpp  UE_Tool.h  UPackageGenerator.hpp  main.cpp  tools.h
